--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pyaes==1.6.1
 pycparser==2.21
 pycryptodome==3.14.1
 pymongo==4.0.1
+PyNaCl==1.4.0
 pyOpenSSL==21.0.0
 pytz==2021.3
 pywin32-ctypes==0.2.0
