--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pymongo==4.0.1
 PyNaCl==1.4.0
 pyOpenSSL==21.0.0
 pytz==2021.3
+python-ffmpeg==1.0.14
 pywin32-ctypes==0.2.0
 requests==2.26.0
 SecretStorage==3.3.1
