--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.7.4.post0
 async-generator==1.10
 async-timeout==3.0.1
+asyncio==3.4.3
 attrs==21.2.0
 beautifulsoup4==4.10.0
 browser-cookie3==0.13.0
