--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ pytz==2021.3
 python-ffmpeg==1.0.14
 pywin32-ctypes==0.2.0
 requests==2.26.0
-speedtest==0.0.1
+speedtest-cli==2.1.3
 SecretStorage==3.3.1
 six==1.16.0
 sniffio==1.2.0
